--- a/versions/fabric/1.21/config/yosbr/config/modernfix-mixins.properties
+++ b/versions/fabric/1.21/config/yosbr/config/modernfix-mixins.properties
@@ -4,6 +4,7 @@
 #     mixin.perf.clear_fabric_mapping_tables | may be incompatible with other mods
 #     mixin.perf.remove_spawn_chunks | breaks vanilla parity
 #     mixin.perf.clear_mixin_classinfo | may be incompatible with other mods
+#     mixin.perf.dynamic_resources | seems to cause invisible chests with EBE
 # 
 # Thanks HyperSoop for allowing me to modify the config file for Adrenaline :)
 # 
@@ -11,5 +12,4 @@
 # wiki on the Git repo: https://github.com/embeddedt/ModernFix/wiki
 
 mixin.perf.dynamic_entity_renderers=true
-mixin.perf.dynamic_resources=true
 mixin.perf.faster_item_rendering=true
